fixed sort feature

--- a/src/MovieList.css
+++ b/src/MovieList.css
@@ -1,18 +1,45 @@
-.movieListContainer{
+.movieListContainerActive{
     display:flex;
     flex-wrap: wrap; /* Enable wrapping of items */
-    justify-content: flex-start; /* Align items to the start of the container */
+    justify-content: center; /* Align items to the start of the container */
+    margin-left: 30px;
+    margin-right: 30px;
 
 }
 .movieListContainerInactive{
     display:none;
-    flex-wrap: wrap; /* Enable wrapping of items */
-    justify-content: flex-start; /* Align items to the start of the container */
 }
 
 .searchInactive{
     display:none;
 }
 .searchActive{
-    display:block;
+    display:flex;
+    justify-content: center;
+    height:60px;
+    margin:20px;
 }
+.searchActive input{
+    width:300px;
+    border-width:4px;
+}
+
+
+.toggleButtons{
+    display:flex;
+    justify-content:space-evenly;
+}
+.toggleButtons button{
+    width:45%;
+    margin-left:50px;
+    margin-right:50px;
+    margin-top: 0px;
+    margin-bottom: 1px;
+    padding:20px;
+}
+.loadMoreButton{
+    width:800px;
+    margin:20px;
+    height:60px;
+}
+
