--- a/src/MovieCard.css
+++ b/src/MovieCard.css
@@ -1,7 +1,31 @@
 .movieCard{
     margin: '10px';
     padding: '10px';
-    border: '1px solid black';
-    width:25%;
-
+    width:300px;
+    box-shadow:15px 9px 9px;
+    margin:30px;
+    background-color: white;
+    border-radius: 5px;
 }
+@media (max-width: 700px) {
+.movieCard{
+    width:50%;
+}
+}
+.movieImage{
+    width:100%;
+    height:85%;
+    border-radius: 5px;
+}
+.movieCard:hover {
+    box-shadow:15px 9px 9px;
+    transform: scale(1.05) rotate(-1deg);
+
+  }
+
+  .movieTitle{
+    font-size: 15px;
+  }
+  .movieRating{
+    font-size: 10px;
+  }
