--- a/src/MovieCard.css
+++ b/src/MovieCard.css
@@ -1,35 +1,46 @@
-.movieCard{
-  display:flex;
-  flex-direction:column;
-    margin: '10px';
-    padding: '10px';
-    width:220px;
-    margin:30px;
-    background-color: rgba(24,24,24,255);
-    border-radius: 5px;
-    /* border-left: 3px  solid red; */
-    border-bottom: 5px  solid red;
-
+.movieCard {
+  display: flex;
+  flex-direction: column;
+  margin: "10px";
+  padding: "10px";
+  width: 220px;
+  margin: 30px;
+  background-color: rgba(24, 24, 24, 255);
+  border-radius: 5px;
+  /* border-left: 3px  solid red; */
+  border-bottom: 5px solid red;
 }
 @media (max-width: 700px) {
-.movieCard{
-    width:50%;
+  .movieCard {
+    width: 50%;
+  }
 }
-}
-.movieImage{
-    width:100%;
-    height:85%;
-    border-radius: 5px;
+.movieImage {
+  width: 100%;
+  height: 85%;
+  border-radius: 5px;
 }
 .movieCard:hover {
-  box-shadow:15px 9px 9px black;
-  transform: scale(1.05) ;
+  box-shadow: 15px 9px 9px black;
+  transform: scale(1.05);
+}
 
-  }
+.movieTitle {
+  font-size: 15px;
+}
+.movieRating {
+  font-size: 10px;
+}
 
-  .movieTitle{
-    font-size: 15px;
-  }
-  .movieRating{
-    font-size: 10px;
-  }
+.favorite {
+  color: red;
+  padding: 10px;
+}
+
+.toggleContainer {
+  display: flex;
+  justify-content: space-between;
+}
+.checkBox {
+  margin: 15px;
+}
