--- a/src/MovieList.css
+++ b/src/MovieList.css
@@ -41,6 +41,9 @@
     border-radius: 310px;
 
 }
+.toggleButtons button:hover{
+    transform: scale(1.1) ;
+}
 .loadMoreButton{
     width:800px;
     margin:20px;
