--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   text-align: center;
   background-color: rgba(20, 20, 20, 255);
   color: white;
+  width: 100%;
+  overflow: hidden;
 }
 
 @media (max-width: 600px) {
